# team-diamonds

./: .coverage 2  .coverage 3  .gitignore  .watchfilesignore  Dockerfile  LICENSE  Makefile  README.md  TESTING.md  auth.py  claude.md  conftest.py  handler.py  main.py  makefile  mkdocs.yml  openapi.json  openapi_client_config.yaml  pyproject.toml  render.yaml  test_api.py  test_endpoints.py
.circleci/: config.yml
.github/: pull_request_template.md
Helper/: app.jsx  index.html
components/chat_to_issues_integration/: README.md  __init__.py  demo.py  pyproject.toml  setup_slack_app.md  slack_bot_server.py  test_bot_setup.py
components/chat_to_issues_integration/examples/: README.md  slack_demo_full.py
components/chat_to_issues_integration/src/chat_to_issues_integration/: __init__.py  app.py  chat_client.py  mock_chat_client.py  slack_bot_server.py  slack_client.py
components/chat_to_issues_integration/tests/: __init__.py  test_bot_setup.py  test_integration_app.py  test_mock_chat_client.py  test_slack_client.py
components/component-n/: pyproject.toml
components/component-n/src/: main.py
components/jira_chat_bridge/: __init__.py  bridge.py  pyproject.toml
components/jira_chat_bridge/tests/: __init__.py  test_bridge.py
components/jira_client_impl/: README.md  pyproject.toml
components/jira_client_impl/src/jira_client_impl/: __init__.py  jira_board.py  jira_impl.py  jira_issue.py  jira_list.py
components/jira_client_impl/tests/: test_core_methods.py
components/jira_service/: pyproject.toml
components/jira_service/src/jira_service/: __init__.py  ai_client_api.py  auth.py  exceptions.py  handler.py  main.py
components/jira_service/tests/: __init__.py  test_ai_client_api.py  test_auth.py  test_handler.py  test_main_helpers.py
components/jira_service/tests/integration/: __init__.py  test_api.py
components/jira_service_adapter/: pyproject.toml
components/jira_service_adapter/src/jira_service_adapter/: __init__.py  adapter.py  issue.py
components/jira_service_adapter/tests/: __init__.py  test_adapter.py
components/jira_service_api_client/: README.md  pyproject.toml
components/jira_service_api_client/jira_service_api_client/: __init__.py
components/jira_service_api_client/jira_service_api_client/api/default/: callback_auth_callback_get.py  create_issue_issues_post.py  delete_issue_issues_issue_id_delete.py  get_issue_issues_issue_id_get.py  health_check_health_get.py  list_issues_issues_get.py  login_auth_login_get.py  logout_auth_logout_get.py  metrics_metrics_get.py  root_get.py  update_issue_issues_issue_id_put.py
components/jira_service_api_client/jira_service_api_client/models/: __init__.py  callback_auth_callback_get_response_callback_auth_callback_get.py  create_issue_issues_post_response_create_issue_issues_post.py  create_issue_request.py  delete_issue_issues_issue_id_delete_response_delete_issue_issues_issue_id_delete.py  get_issue_issues_issue_id_get_response_get_issue_issues_issue_id_get.py  health_check_health_get_response_health_check_health_get.py  list_issues_issues_get_response_list_issues_issues_get.py  logout_auth_logout_get_response_logout_auth_logout_get.py  root_get_response_root_get.py  status.py  update_issue_issues_issue_id_put_response_update_issue_issues_issue_id_put.py  update_issue_request.py
components/jira_service_api_client/src/jira_service_api_client/: __init__.py  client.py  models.py
components/jira_service_api_client/tests/: __init__.py  test_client.py
components/work_mgmt_client_interface/: README.md  pyproject.toml
components/work_mgmt_client_interface/src/work_mgmt_client_interface/: __init__.py  board.py  client.py  issue.py  list.py
docs/: CONTRIBUTING.md  CROSS_VERTICAL_INTEGRATION.md  DEPLOYMENT_OVERVIEW.md  DESIGN.md  IMPLEMENTATION_JIRA.md  INTEGRATION_SUMMARY.md  INTERFACE.md  JIRA_CLIENT_IMPLEMENTATION.md  JIRA_SERVICE.md  JIRA_SERVICE_ADAPTER.md  JIRA_SERVICE_API_CLIENT.md  README.md  TEAM_9_CROSS_VERTICAL_PITCH.md  TEAM_9_EXAMPLE_IMPLEMENTATION.md  TEAM_9_INTEGRATION_GUIDE.md  _DEPRECATED_CHAT_TO_ISSUES_INTEGRATION.md  _DEPRECATED_JIRA_CHAT_BRIDGE.md  _DEPRECATED_JIRA_SERVICE_ADAPTER.md  _DEPRECATED_JIRA_SERVICE_API_CLIENT.md  _DEPRECATED_WORK_MGMT_CLIENT_INTERFACE.md
frontend/: index.html  main.js  package-lock.json  package.json
frontend/apiGateway-js-sdk/: apigClient.js
frontend/src/: App.jsx  index.css
frontend/src/auth/: AuthCallback.jsx  JiraCallback.jsx  authConfig.js
frontend/src/components/: ConnectAppModal.jsx  Icons.jsx  Sidebar.jsx  Topbar.jsx
frontend/src/config/: api.js
frontend/src/data/: mock.js
frontend/src/pages/: Analytics.jsx  Commands.jsx  ConnectedApps.jsx  Home.jsx  Issues.jsx  Settings.jsx
jira_service_api_client/: client.py  errors.py  pyproject.toml
jira_service_api_client/api/default/: callback_auth_callback_get.py  create_issue_issues_post.py  delete_issue_issues_issue_id_delete.py  get_issue_issues_issue_id_get.py  health_check_health_get.py  list_issues_issues_get.py  root_get.py  (+3 more)
jira_service_api_client/models/: __init__.py  callback_auth_callback_get_response_callback_auth_callback_get.py  create_issue_issues_post_response_create_issue_issues_post.py  delete_issue_issues_issue_id_delete_response_delete_issue_issues_issue_id_delete.py  get_issue_issues_issue_id_get_response_get_issue_issues_issue_id_get.py  health_check_health_get_response_health_check_health_get.py  http_validation_error.py  list_issues_issues_get_response_list_issues_issues_get.py  logout_auth_logout_get_response_logout_auth_logout_get.py  root_get_response_root_get.py  status.py  update_issue_issues_issue_id_put_response_update_issue_issues_issue_id_put.py  validation_error.py  validation_error_context.py
test_lambda_package/: auth.py  handler.py  test_endpoints.py
test_lambda_package/jira_client_impl/: __init__.py  jira_board.py  jira_impl.py
test_lambda_package/work_mgmt_client_interface/: client.py
tests/e2e/: test_client_e2e.py
tests/integration/: test_client_integration.py  test_cross_vertical_integration.py
tests/unit/: test_auth.py  test_handler.py
(+6 files in other folders)
