[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-chat-bridge"
version = "0.1.0"
description = "Bridges Team 9's chat service with the Jira AI /chat endpoint"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jira_chat_bridge"]
