[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-service"
version = "0.1.0"
description = "FastAPI service exposing the Jira client over HTTP with OAuth2"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.100.0",
    "uvicorn[standard]>=0.30.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "work-mgmt-client-interface",
    "jira-client-impl",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jira_service"]

[tool.uv.sources]
work-mgmt-client-interface = {workspace = true}
jira-client-impl = {workspace = true}

[tool.coverage.report]
fail_under = 85
