[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-service-adapter"
version = "0.1.0"
description = "Adapter that implements IssueTrackerClient over the Jira FastAPI service"
requires-python = ">=3.12"
dependencies = [
    "ospd-issue-tracker-api",
    "jira-service-api-client",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jira_service_adapter"]

[tool.uv.sources]
ospd-issue-tracker-api = { git = "https://github.com/tatyanacthomas/ospd_issue_tracker.git", branch = "main" }
jira-service-api-client = {workspace = true}

[tool.coverage.report]
fail_under = 84
