[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-service-api-client"
version = "1.0.0"
description = "Type-safe HTTP client for the Jira FastAPI service"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jira_service_api_client"]
