[project]
name = "work-mgmt-client-interface"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/work_mgmt_client_interface"]

[tool.hatch.build.targets.wheel.force-include]
"src/work_mgmt_client_interface/py.typed" = "work_mgmt_client_interface/py.typed"